Update from template

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,13 @@
-exclude: template/.pre-commit-config.yaml.jinja|template/{{ _copier_conf.answers_file }}.jinja
-
 ci:
   skip:
-    - "core-update"
+    - "sync"
     - "pytest-fast-only"
-    - "fawltydeps"
+    - "check-undeclared"
+    - "check-unused"
   autoupdate_schedule: "quarterly"
-
+default_install_hook_types:
+  - pre-commit
+  - post-checkout # sync-python
 repos:
   - repo: "meta"
     hooks:
@@ -15,50 +16,74 @@ repos:
       - id: "check-useless-excludes"
   - repo: "local"
     hooks:
-      - id: "core-update"
-        name: "core-update"
-        stages: ["post-commit"]
-        always_run: true
-        verbose: true
+      - id: "sync"
+        name: "sync"
+        stages:
+          - "pre-commit"
+          - "post-checkout"
         pass_filenames: false
         language: "system"
-        entry: "pwsh -Command python .tools/scripts/core_update.py"
+        entry: "pwsh scripts/Sync-Py.ps1"
+        files: |
+          (?x)^(
+            .*/pyproject\.toml
+            |docs/.*\.ipynb
+            |params\.yaml
+            |requirements/.*
+            |scripts/.*
+          )$
       - id: "pytest-fast-only"
         name: "pytest-fast-only"
-        verbose: true
         pass_filenames: false
         language: "system"
         entry: |
           pwsh -Command "pytest -m 'not slow' --suppress-no-test-exit-code"
         files: |
           (?x)^(
-            pyproject\.toml
-            src/.*
+            .*/pyproject\.toml
+            |docs/.*
+            |requirements/.*
+            |scripts/.*
+            |src/.*
             |tests/.*
-            |\.tools/requirements/.*
-          )$
-      - id: "fawltydeps"
-        name: "fawltydeps"
-        verbose: true
-        pass_filenames: false
-        language: "system"
-        entry: "pwsh -Command fawltydeps"
-        files: |
-          (?x)^(
-            src/.*
-            |pyproject\.toml
-            |requirements\.txt
-            |\.tools/requirements/.*
           )$
   - repo: "https://github.com/pre-commit/pre-commit-hooks"
     rev: "v4.5.0"
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
-  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
-    rev: "v0.11.0"
+  - repo: "https://github.com/tweag/FawltyDeps"
+    rev: "v0.15.0"
     hooks:
-      - id: "markdownlint-cli2-fix"
+      - id: "check-unused"
+        files: |
+          (?x)^(
+            pyproject\.toml
+          )$
+      - id: "check-undeclared"
+        name: "check-undeclared-src"
+        files: |
+          (?x)^(
+            src/.*
+          )$
+      - id: "check-undeclared"
+        name: "check-undeclared-docs"
+        args: ["--config-file", "docs/pyproject.toml", "--code"]
+        files: |
+          (?x)^(
+            docs/.*
+          )$
+      - id: "check-undeclared"
+        name: "check-undeclared-tests"
+        args: ["--config-file", "tests/pyproject.toml", "--code"]
+        files: |
+          (?x)^(
+            tests/.*
+          )$
+  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
+    rev: "v0.12.1"
+    hooks:
+      - id: "markdownlint-cli2"
   - repo: "https://github.com/srstevenson/nb-clean"
     rev: "3.2.0"
     hooks:
@@ -71,14 +96,15 @@ repos:
           - "--"
         files: |
           (?x)^(
-            src/.*
-            |docs/.*
+            docs/.*
+            |src/.*
             |tests/.*
           )$
   - repo: "https://github.com/charliermarsh/ruff-pre-commit"
-    rev: "v0.1.11"
+    rev: "v0.3.3"
     hooks:
       - id: "ruff"
+        args: ["--extend-fixable", "PIE790"]
         types_or: ["python", "pyi", "jupyter"]
       - id: "ruff-format"
         types_or: ["python", "pyi", "jupyter"]
