--- a/tests/pyproject.toml
+++ b/tests/pyproject.toml
@@ -4,5 +4,17 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "copier_python_tests"
-description = "Tests."
 version = "0.0.0"
+description = "Tests."
+dependencies = [
+    "pytest-cov==4.1.0",
+    "pytest-custom-exit-code==0.3.0",
+    "pytest-github-actions-annotate-failures==0.2.0",
+    "pytest==8.0.0",
+]
+
+[tool.fawltydeps]
+actions = ["check_undeclared"]
+deps = ["tests/pyproject.toml", "pyproject.toml"]
+code = ["tests/copier_python_tests"]
+ignore_undeclared = ["copier_python"]
