--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # * -------------------------------------------------------------------------------- * #
 # * Template gitignore
 
+# Locally-compiled dependencies
+.comps
+# Ignore `.ruff-cache` just in case, and to grey it out in the sidebar
+.ruff_cache
 # To allow for local variation in type checking without overriding CI
 pyrightconfig.json
 # To allow for local variation in test configuration without overriding CI
@@ -12,8 +16,8 @@ pytest.ini
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
-_build
-_site
+_build/
+_site/
 # If using Google Cloud Platform Workload Identity Federation, avoid committing keys
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
