--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,22 @@
 
 {
   "version": "2.0.0",
+  "inputs": [
+    {
+      "id": "templateOptions",
+      "description": "Template options.",
+      "type": "pickString",
+      "options": [
+        "",
+        "-Defaults",
+        "-Recopy",
+        "-Recopy -Defaults",
+        "-Defaults -NoVerify",
+        "-Recopy -NoVerify",
+        "-Recopy -Defaults -NoVerify"
+      ]
+    }
+  ],
   "tasks": [
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
@@ -12,31 +28,24 @@
       "label": "setup: Copy template",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
-      "command": ".tools/scripts/Copy-Template.ps1",
+      "command": "scripts/Copy-Template.ps1 ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
-      "label": "setup: Setup project",
+      "label": "setup: Setup or sync virtual environment",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
-      "command": "setup.ps1",
+      "command": "scripts/Sync-Py.ps1",
       "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
-    },
-    {
-      "label": "setup: Update project",
-      "type": "shell",
-      "options": { "shell": { "executable": "pwsh" } },
-      "command": "update.ps1",
-      "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
+      "problemMatcher": [],
+      "runOptions": { "runOn": "folderOpen" }
     },
     {
       "label": "setup: Perform first-time setup",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
-      "command": "first_time_setup.ps1",
+      "command": "scripts/Initialize-Repo.ps1",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -85,14 +94,6 @@
     // * OTHER TASKS * //
 
     {
-      "label": "task: format notebook",
-      "type": "shell",
-      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
-      "command": "nb-clean clean --remove-empty-cells --preserve-cell-outputs --preserve-cell-metadata special tags -- ${file}; ruff --fix-only ${file}; ruff format ${file}",
-      "icon": { "id": "notebook" },
-      "problemMatcher": []
-    },
-    {
       "label": "task: Run pytest with coverage",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
@@ -104,15 +105,7 @@
       "label": "task: run core update",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
-      "command": "python .tools/scripts/core_update.py",
-      "icon": { "id": "check" },
-      "problemMatcher": []
-    },
-    {
-      "label": "task: Run pyright",
-      "type": "shell",
-      "options": { "shell": { "executable": "pwsh" } },
-      "command": ".tools/scripts/Invoke-Pyright.ps1",
+      "command": "python scripts/core_update.py",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
@@ -120,7 +113,7 @@
       "label": "task: Run ruff",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
-      "command": "ruff .",
+      "command": "ruff check .; ruff format .",
       "icon": { "id": "check" },
       "problemMatcher": []
     },
@@ -128,7 +121,7 @@
       "label": "task: sphinx-autobuild docs (preview)",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
-      "command": "sphinx-build -Ean docs _site; sphinx-autobuild -n docs _site --watch **/*.md",
+      "command": "sphinx-build -EaT docs _site; sphinx-autobuild -T docs _site --ignore *params.yaml --ignore *params_schema.json --ignore apidocs --ignore data",
       "icon": { "id": "book" },
       "problemMatcher": []
     },
