Remove old tools

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,22 +4,6 @@
 
 {
   "version": "2.0.0",
-  "inputs": [
-    {
-      "id": "templateOptions",
-      "description": "Template options.",
-      "type": "pickString",
-      "options": [
-        "",
-        "-Defaults",
-        "-Recopy",
-        "-Recopy -Defaults",
-        "-Defaults -NoVerify",
-        "-Recopy -NoVerify",
-        "-Recopy -Defaults -NoVerify"
-      ]
-    }
-  ],
   "tasks": [
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
@@ -28,7 +12,7 @@
       "label": "setup: Copy template",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
-      "command": "scripts/Copy-Template.ps1 ${input:templateOptions}",
+      "command": "scripts/Copy-Template.ps1",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
