--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,7 +1,7 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
 _commit: f512263
 _src_path: gh:blakeNaccarato/copier-python
-actions_runner: ubuntu-latest
+actions_runner: ubuntu-22.04
 active: true
 github_repo_name: copier-python
 project_description: Copier template for Python projects.
@@ -10,5 +10,5 @@ project_name: copier_python
 project_owner_github_username: blakeNaccarato
 project_owner_name: Blake Naccarato
 project_version: 0.0.0
-python_version: '3.11'
+python_version: "3.11"
 year_of_project_creation: 2022
