Update from template, fix some things

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,10 @@
+exclude: |
+  (?x)^(
+    template/(
+      .*answers_file.*
+      |docs/.*project_name.*
+    )
+  $)
 ci:
   skip:
     - "sync"
