--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: f512263
+_commit: 1dc8483
 _src_path: gh:blakeNaccarato/copier-python
 actions_runner: ubuntu-22.04
 active: true
@@ -10,5 +10,5 @@ project_name: copier_python
 project_owner_github_username: blakeNaccarato
 project_owner_name: Blake Naccarato
 project_version: 0.0.0
-python_version: "3.11"
+python_version: '3.11'
 year_of_project_creation: 2022
