Test contrib and CI workflows

--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -26,6 +26,8 @@ jobs:
         lock:
           - ""
           - "-Lock"
+    env:
+      SYNC_PY_DISABLE_CI: true
     runs-on: "${{ matrix.runner }}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
@@ -36,7 +38,23 @@ jobs:
           python-version: "3.11"
       - shell: "pwsh"
         run: "scripts/Sync-Py.ps1 -Compile ${{ matrix.lock }}"
+  ci:
+    strategy:
+      matrix:
+        runner:
+          - "macos-13"
+          - "ubuntu-22.04"
+          - "windows-2022"
+        lock:
+          - ""
+          - "-Lock"
+    runs-on: "${{ matrix.runner }}"
+    steps:
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
+        with:
+          submodules: True
+      - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
+        with:
+          python-version: "3.11"
       - shell: "pwsh"
-        env:
-          SYNC_PY_DISABLE_CI: true
         run: "scripts/Sync-Py.ps1 -Compile ${{ matrix.lock }}"
