Update from template, don't re-lock on submodule changes. Remove DVC mention. Remove params mention

--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -15,12 +15,16 @@ on:
       - "scripts/Sync-Py.ps1"
       - "scripts/copier_python_tools/**"
       - "scripts/pyproject.toml"
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   contrib:
     strategy:
       matrix:
         runner:
           - "macos-13"
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
     env:
@@ -33,13 +37,13 @@ jobs:
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
           python-version: "3.11"
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
+      - run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
   ci:
     strategy:
       matrix:
         runner:
           - "macos-13"
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
     runs-on: "${{ matrix.runner }}"
@@ -50,5 +54,22 @@ jobs:
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
           python-version: "3.11"
-      - shell: "pwsh"
+      - run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
+  spaces:
+    strategy:
+      matrix:
+        runner:
+          - "macos-13"
+          - "macos-14"
+          - "windows-2022"
+    runs-on: "${{ matrix.runner }}"
+    steps:
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
+        with:
+          submodules: True
+          path: "repo path with spaces"
+      - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
+        with:
+          python-version: "3.11"
+      - working-directory: "repo path with spaces"
         run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
