--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,29 +1,23 @@
-name: "CodeQL"
-
+# Check for security vulnerabilities
+name: "codeql"
 on:
+  workflow_dispatch:
   schedule:
     - cron: "38 16 * * 4"
-
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   analyze:
-    name: "Analyze"
-    runs-on: "ubuntu-latest"
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ["python"]
-
+    runs-on: "ubuntu-22.04"
+    permissions:
+      security-events: write
     steps:
-      - name: "Checkout repository"
-        uses: "actions/checkout@v4.1.1"
-      - name: "Initialize CodeQL"
-        uses: "github/codeql-action/init@v3.23.2"
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
+      - uses: "github/codeql-action/init@3ab4101902695724f9365a384f86c1074d94e18c" # v3.24.7
         with:
-          languages: "${{ matrix.language }}"
-      - name: "Autobuild"
-        uses: "github/codeql-action/autobuild@v3.23.2"
-      - name: "Perform CodeQL Analysis"
-        uses: "github/codeql-action/analyze@v3.23.2"
+          languages: "python"
+      - uses: "github/codeql-action/autobuild@3ab4101902695724f9365a384f86c1074d94e18c" # v3.24.7
+      - uses: "github/codeql-action/analyze@3ab4101902695724f9365a384f86c1074d94e18c" # v3.24.7
         with:
-          category: "/language:${{matrix.language}}"
+          category: "/language:python"
