--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -16,6 +16,8 @@
     "**/*pylance-notebook-cell*": true
   },
   "search.exclude": {
+    //? Template clutters quick-open
+    "submodules/template": true,
     //? Type stubs clutter quick-open
     "submodules/typings": true,
     //? Locks clutter searches
