--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults",
+  "addLabels": ["deps"],
   "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
   "dependencyDashboardApproval": false,
   "schedule": ["on the first day of the month"],
