--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "**/*pylance-notebook-cell*": true
   },
   "search.exclude": {
+    //? Template clutters quick-open
+    "submodules/template": true,
     //? Type stubs clutter quick-open
     "submodules/typings": true,
     //? Locks clutter searches
@@ -85,7 +87,7 @@
   },
   //! Extensions
   //* GitHub Actions
-  "github-actions.workflows.pinned.workflows": [".github/workflows/main.yml"],
+  "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   //* Jupyter Notebooks
   "jupyter.notebookFileRoot": "${workspaceFolder}",
   "jupyter.showVariableViewWhenDebugging": true,
