--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -17,7 +17,7 @@
     // * PROJECT SETUP * //
 
     {
-      "label": "setup: Copy template",
+      "label": "setup: Sync project with template",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
       "command": "scripts/Sync-Template.ps1 ${input:templateOptions}",
