Sync project with own template and fix a few regressions

--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -6,9 +6,16 @@ build-backend = "flit_core.buildapi"
 name = "copier_python_tools"
 version = "0.0.0"
 description = "Tools."
-dependencies = ["cyclopts==2.4.2"]
+dependencies = [
+    "copier==9.1.1",
+    "cyclopts==2.4.2",
+    "pre-commit==3.6.2",
+    "zstandard==0.22.0",
+]
 [project.scripts]
 copier_python_tools = "copier_python_tools.__main__:main"
 
 [tool.fawltydeps]
 actions = ["check_undeclared"]
+deps = ["scripts/pyproject.toml", "pyproject.toml"]
+code = ["scripts/boilercv_tools"]
