--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,8 @@
   //! Terminal
   //? Use PowerShell on all platforms, facilitates running template scripts
   "terminal.integrated.defaultProfile.windows": "PowerShell",
-  "terminal.integrated.defaultProfile.linux": "PowerShell",
-  "terminal.integrated.defaultProfile.osx": "PowerShell",
+  "terminal.integrated.defaultProfile.linux": "pwsh",
+  "terminal.integrated.defaultProfile.osx": "pwsh",
   //! File excludes
   "files.exclude": {
     //? Cache directory set in `pyproject.toml`
@@ -94,6 +94,7 @@
   //* MyST
   "myst.preview.extensions": ["colon_fence", "dollarmath"],
   //* Pylance
+  "python.terminal.activateEnvInCurrentTerminal": true,
   "python.languageServer": "Pylance",
   "python.analysis.typeCheckingMode": "strict",
   "python.analysis.autoFormatStrings": true,
