--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -17,7 +17,7 @@
   ],
   "git-submodules": {
     "description": "Additionally monitor these files",
-    "fileMatch": ["(^|/)\\.github/workflows/.+\.ya?ml.jinja$"]
+    "fileMatch": ["(^|/)\\.github/workflows/.+\\.ya?ml.jinja$"]
   },
   "pep621": {
     "description": "Additionally monitor these files",
